@@ -4,6 +4,9 @@
 
 	* NEWS: add 1.8.0 entry.
 
+	* test/test_context.rb (ContextTest#test_font_face): remove
+	needless test.
+
 	* src/rb_cairo_context.c: support cairo 1.8.0.
 
 2008-09-19  Kouhei Sutou  <kou@cozmixng.org>
